src/objects/BMCServiceDesk__BMC_FileSystem__c.object
<CustomObject>
    <description>BMC_FileSystem. CMDB Class that stores information about systems that operating systems or programs use to organize and keep track of files and datasets. The file systems can be local (such as an instance of BMC_ComputerSystem or BMC_ApplicationSystem) or remotely mounted from a file server. This class corresponds to the DMTF CIM_FileSystem class.</description>
    <fields>
        <fullName>BMCServiceDesk__Available_Space__c</fullName>
        <label>Available Space</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Block_Size__c</fullName>
        <label>Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Size__c</fullName>
        <label>File System Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__File_System_Type__c</fullName>
        <label>File System Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>File System</label>
    <nameField>
        <label>FileSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>